--- a/src/se/views/changePassword.scala.html
+++ b/src/se/views/changePassword.scala.html
@@ -8,9 +8,9 @@
     </h1>
     <div class="personal-info">
         @helper.form(action = routes.UserController.changePassword()) {
-            @helper.inputText(changePasswordForm("oldPassword"))
-            @helper.inputText(changePasswordForm("newPassword"))
-            @helper.inputText(changePasswordForm("confirmPassword"))
+            @helper.inputPassword(changePasswordForm("oldPassword"))
+            @helper.inputPassword(changePasswordForm("newPassword"))
+            @helper.inputPassword(changePasswordForm("confirmPassword"))
             <button type="submit">Passwort ändern</button>
         }
     </div>
