--- a/src/se/views/mainEmployeeMenu.scala.html
+++ b/src/se/views/mainEmployeeMenu.scala.html
@@ -3,13 +3,9 @@
 @main(models.Company.name) {
     <div class="top-menu">
         <ul class="top-menu-nav">
-            <a class="top-menu-btn" href="/products">PRODUKTE</a>
+            <a class="top-menu-btn" href="/all-products">PRODUKTE</a>
             <a class="top-menu-btn" href="/orders">BESTELLUNGEN</a>
-            <button class="top-menu-btn">NUTZER</button>
-            <div class="user-dropdown-content">
-                <a class="top-menu-btn" href="/users">KUNDEN</a>
-                <a class="top-menu-btn" href="/users">MITARBEITER</a>
-            </div>
+            <a class="top-menu-btn" href="/users">NUTZER</a>
             <button class="tom-menu-btn">MEHR</button>
             <div class="more-dropdown-content">
                 <a class="top-menu-btn" href="/categories">KATEGORIEN</a>
